# bithon

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: bithon_gls_manual.en.md  bithon_gls_manual.ja.md
src/bithon/: bithon.py  codon_alignment.py  ensembl_gls.py  fs.py  get_longest_seq.py  hello.py  ncbi_gls.py  parsegtf.py
tests/: test_fs.py  test_parsegtf.py
