[build-system]
requires = ["flit_core>=3.4"]
build-backend = "flit_core.buildapi"

[project]
name = "bithon"
version = "0.0.1"
authors = [
  { name="ymat2", email="yuki.matsuda.r7@dc.tohoku.ac.jp" },
]
description = "Personal python package for bioinformatics"
readme = "README.md"
requires-python = ">=3.7"

[project.urls]
"Homepage" = "https://ymat2.github.io"
"Source" = "https://github.com/ymat2/bithon"

[project.scripts]
"bithon" = "bithon.bithon:main"
